# wingpanel-indicator-powersave

./: README.md  meson.build
data/: io.elementary.desktop.wingpanel.powersave.gschema.xml  io.elementary.desktop.wingpanel.powersave.policy  io.elementary.powersave.modifier  meson.build
debian/: changelog  control  copyright
po/: cpufreq-indicator.pot  powersave-indicator.pot  ru.po
src/: Indicator.vala  Utils.vala
src/Widgets/: PanelWidget.vala  PopoverWidget.vala
